[package]
name = "blinkerust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
rp2040-hal = "0.8.0" 
cortex-m-rt = "0.7.3"
rp2040-boot2= "0.2"
panic-halt = "0.2.0"
rp-pico = "0.7.0"
